# django-nuxt

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: release.yml
django_nuxt/: backends.py  data_processor.py  metadata.py  schema.py  standard_schema.py  staticfiles.py  urls.py  views.py
django_nuxt/management/commands/: nuxt_schema.py
docs/: tutorial.md
example/basic/: pyproject.toml  requirements.txt
example/basic/basic/: README.md  asgi.py  settings.py  urls.py  wsgi.py
example/basic/todo_app/: admin.py  metadata.py  models.py  router.py
example/basic/todo_app/migrations/: 0002_todo_done.py  0003_alter_todo_title.py  0004_who.py
example/basic/ui/: nuxt.config.ts  package.json  pnpm-lock.yaml
example/basic/ui/app/: app.vue
example/basic/ui/app/plugins/: djangoModelPath.ts
example/simple/: requirements.txt
example/simple/simple/: asgi.py  settings.py  urls.py  wsgi.py
example/simple/simple_app/: apps.py  router.py
example/simple/simple_app/migrations/: 0001_initial.py
example/simple/ui/: package-lock.json
example/simple/ui/app/: app.vue
nuxt-django/: .npmrc  README.md  package.json  pnpm-lock.yaml  tsconfig.json
nuxt-django/src/: module.ts
nuxt-django/src/runtime/composables/: useDjangoModel.ts  useDjangoNuxt.ts  useDjangoNuxtModelPath.ts  useDjangoSchema.ts
nuxt-django/src/runtime/plugins/: django-drf-csrf.ts  django-nuxt.ts
nuxt-django/src/runtime/utils/: crud.ts  (+1 more)
nuxt_django/: pnpm-lock.yaml
nuxt_django/src/: module.ts
tests/: driver.py  test_backends.py  test_django_nuxt.py  test_settings.py
tests/fixtures/: 200.html
(+4 files in other folders)
