[build-system]
requires = ["setuptools>=80.9"]
build-backend = "setuptools.build_meta"

[project]
name = "django-nuxt"
version = "0.2.13"
dependencies = [
    "django>=5.2.0",
    "requests>=2.0",
]
description = "A Django app to integrate Nuxt with Django."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">= 3.10"
authors = [
    {name = "Juho Rutila", email = "juho@rutila.fi"},
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
Homepage = "https://github.com/jrutila/django-nuxt"

[tool.setuptools.packages.find]
where = ["."]
include = ["django_nuxt"]
exclude = []