[project]
name = "django-nuxt-example-basic"
version = "0.1.0"
description = "Basic example project for django-nuxt."
requires-python = ">=3.10"
dependencies = [
    "django==5.2.4",
    "djangorestframework==3.16.0",
    "django-nuxt",
]

[tool.uv]
package = false

[tool.uv.sources]
django-nuxt = { path = "../..", editable = true }
